<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ExamSettingsActivity">

    <TextView
        android:id="@+id/settingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/exam_settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/examDuration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settingText"
        android:hint="@string/exam_duration"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:startIconDrawable="@drawable/ic_timer"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/questionScore"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:foregroundTint="@color/black"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/examDuration"
        android:hint="@string/question_score"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:startIconDrawable="@drawable/ic_q"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/examDifficulty"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/questionScore" />

    <Button
        android:id="@+id/applySettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/examDifficulty"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/apply_settings"
        android:textColor="@color/white" />

</RelativeLayout>